--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body { 
   background-color: #FAF7EF;
   color: #242198;
-  font-size: 16px;
+  font-size: 1rem;
   font-family:'Courier New', Courier, monospace;
 }
 
@@ -29,7 +29,6 @@ a {
   color: white;
   font-weight: bolder;
   border-radius: 4px;
-  font-size: 16px;
   line-height: 72px;
   padding: 15px 20px;
   text-decoration: none;
