--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,600;0,700;1,700&family=Roboto:wght@700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;0,800;1,200;1,300;1,500;1,600&display=swap');
 body { 
   background-color: #FAF7EF;
   color: #242198;
@@ -7,12 +8,12 @@ body {
 }
 
 h1, h2 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
   letter-spacing: 1px;
 }
 
 h1 {
-  font-weight: 900;
+  font-weight: 400;
 }
 
 h2 {
