--- a/style.css
+++ b/style.css
@@ -2,25 +2,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;0,800;1,200;1,300;1,500;1,600&display=swap');
 body { 
   background-color: #FAF7EF;
-  color: #242198;
   font-size: 1rem;
   font-family:'Courier New', Courier, monospace;
 }
 
-h1, h5 {
-  font-family: "poppins-bold", sans-serif;
-  letter-spacing: 1px;
+* {
+  /* border: 1px solid rebeccapurple; */
 }
 
-h1 {
-  font-weight: 800;
-  font-size: 3rem;
+h1, h5 {
+  font-family: "poppins", sans-serif;
 }
 
 h5 {
-  font-size: 2.5rem;
-  letter-spacing: .3rem;
+  font-size: 2rem;
+  margin-top: 4rem;
+  margin-bottom: 0;
+  color: #cc005f;
 }
+
+h1 {
+  font-weight: 700;
+  font-size: 3.5rem;
+  margin: 0;
+}
+
+
 
 a {
   color: #e28566;
@@ -47,7 +54,7 @@ a {
 }
 
 .container {
-  width: 500px;   /* This sets the width */
+  width: 600px;   /* This sets the width */
   margin: 0 auto; /* This automatically sets left/right margins */
 }
 
@@ -58,6 +65,30 @@ a {
   box-shadow: 0 10px 30px rgba(0,0,0,.1);    /* Light shadow */
   margin: 30px auto;
   text-align: center;
+}
+
+.top-card {
+  height: 80vh;
+  margin-top: 3.5rem;
+}
+
+.metier {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 0.7rem 1rem 0 1rem;
+}
+
+.metier::before {
+  content: "|";
+}
+
+.sub-metier::after {
+  content: "|";
+}
+
+.social {
+  margin: 2rem;
 }
 
 .list-inline {
@@ -77,13 +108,13 @@ a {
 @media (max-width: 720px) {
   /* For a screen < 720px, this CSS will be read */
   .container {
-    width: 400px;
+    width: 80%;
   }
 }
 
 @media (max-width: 540px) {
   /* For a screen < 540px, this CSS will be read */
   .container {
-    width: 350px;
+    width: 95%;
   }
 }
