--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   /* border: 1px solid rebeccapurple; */
 }
 
-h1, h5 {
+h1, h2, h5 {
   font-family: "poppins", sans-serif;
 }
 
@@ -27,7 +27,10 @@ h1 {
   margin: 0;
 }
 
-
+h2 {
+  font-size: 2rem;
+  margin-bottom: 0;
+}
 
 a {
   color: #e28566;
@@ -81,7 +84,7 @@ a {
 }
 
 .top-card {
-  /* height: 80vh; */
+  height: 80vh;
   margin-top: 3.5rem;
 }
 
@@ -112,19 +115,18 @@ a {
 
 .list-inline i {
   font-size: 40px;
+  color: #cc005f;
 }
 
 @media (max-width: 720px) {
   /* For a screen < 720px, this CSS will be read */
   .container {
-    width: 80%;
   }
 }
 
 @media (max-width: 540px) {
   /* For a screen < 540px, this CSS will be read */
   .container {
-    width: 95%;
   }
 
 }
